After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 747119 - gstpad: Fix a typo in a doc string
gstpad: Fix a typo in a doc string
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
git master
Other Linux
: Normal minor
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-03-31 14:54 UTC by Wonchul Lee
Modified: 2015-03-31 18:31 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gstpad: Fix a typo in a doc string (849 bytes, patch)
2015-03-31 14:54 UTC, Wonchul Lee
committed Details | Review

Description Wonchul Lee 2015-03-31 14:54:45 UTC
Created attachment 300670 [details] [review]
gstpad: Fix a typo in a doc string

It just remove duplicated 'the' comment on doc string.
Comment 1 Tim-Philipp Müller 2015-03-31 18:30:37 UTC
Thanks, pushed:

commit ca380d16a095353aec964d34eebb108b044589b3
Author: Wonchul Lee <chul0812@gmail.com>
Date:   Tue Mar 31 23:48:22 2015 +0900

    pad: Fix a typo in a docstring
    
    https://bugzilla.gnome.org/show_bug.cgi?id=747119