pad: Fix a typo in a docstring

https://bugzilla.gnome.org/show_bug.cgi?id=747119